코드 형식 변경

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1722,8 +1722,8 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
 }
 .z-textarea:read-only:not(:disabled):not(.os-host-textarea) {
   background-color: transparent;
-  border: none;
-  border: 0.0625rem solid #CFD5D9;
+  border: none !important;
+  border-left: 0.0625rem solid #CFD5D9 !important;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -1750,13 +1750,8 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   border: 0.0625rem solid #76BD26 !important;
 }
 
-.z-textarea-readonly {
+div.z-textarea-readonly {
   border: none !important;
-  border-left: 0.0625rem solid #ABB0B5 !important;
-}
-.z-textarea-disabled:hover, .z-textarea-disabled:focus {
-  border: 0.0625rem solid #ABB0B5 !important;
-  box-shadow: none !important;
 }
 
 .z-switch {
