--- a/src/main/resources/public/template/board/board.html
+++ b/src/main/resources/public/template/board/board.html
@@ -177,7 +177,7 @@
                     inheritedAttrs: "class"
                 }
             });
-            if (document.querySelector('textarea').hasAttribute("readonly") === true) {
+            if ([[${view}]]) {
                 document.querySelectorAll('div.z-textarea').forEach(function (elem) {
                     elem.classList.add('z-textarea-readonly');
                 });
