--- a/src/main/resources/public/template/role/role.html
+++ b/src/main/resources/public/template/role/role.html
@@ -150,7 +150,7 @@
                             inheritedAttrs: "class"
                         }
                     });
-                    if (document.querySelector('textarea').hasAttribute("readonly") === true) {
+                    if ([[${view}]]) {
                         document.querySelectorAll('div.z-textarea').forEach(function (elem) {
                             elem.classList.add('z-textarea-readonly');
                         });
