--- a/src/main/resources/public/template/auth/auth.html
+++ b/src/main/resources/public/template/auth/auth.html
@@ -31,7 +31,7 @@
         <div class="z-edit-row flex-column">
             <label th:text="#{auth.label.authDesc}"></label>
             <textarea class="z-textarea textarea-scroll-wrapper" id="txtAuthDesc" maxlength="200"
-                      name="txtAuthDesc" rows="7" th:readonly="${view}" th:text="${auth?.authDesc}"></textarea>
+                      name="txtAuthDesc" rows="7" th:readonly="${view}" th:classappend="${view} ? 'z-textarea-readonly'" th:text="${auth?.authDesc}"></textarea>
         </div>
         <div class="z-edit-row flex-column">
             <label th:text="#{auth.label.urlList}"></label>
@@ -170,11 +170,6 @@
             inheritedAttrs: "class"
         }
     });
-    if ([[${view}]]) {
-        document.querySelectorAll('div.z-textarea').forEach(function (elem) {
-            elem.classList.add('z-textarea-readonly');
-        });
-    }
 
     /* 등록, 수정 버튼 */
     function onSave(flag) {
