--- a/src/main/resources/public/template/board/board.html
+++ b/src/main/resources/public/template/board/board.html
@@ -36,7 +36,7 @@
     <div class="flex-column z-edit-row">
         <label for="boardAdminDesc" th:text="#{board.label.desc}"></label>
         <textarea class="z-textarea textarea-scroll-wrapper" id="boardAdminDesc" maxlength="2048"
-                  name="boardAdminDesc" rows="7" th:readonly="${view}" th:text="${boardAdmin?.boardAdminDesc}"></textarea>
+                  name="boardAdminDesc" rows="7" th:readonly="${view}" th:classappend="${view} ? 'z-textarea-readonly'" th:text="${boardAdmin?.boardAdminDesc}"></textarea>
     </div>
     <div class="flex-column z-edit-row">
         <label class="z-switch">
@@ -177,11 +177,6 @@
                     inheritedAttrs: "class"
                 }
             });
-            if ([[${view}]]) {
-                document.querySelectorAll('div.z-textarea').forEach(function (elem) {
-                    elem.classList.add('z-textarea-readonly');
-                });
-            }
         }
         //radio check 값에 따라서 화면이 변경 할 수 있도록 변경
         function setDisplay(id, value) {
