#11754 [사용자] 관리자가 사용자 등록을 할 수 없다. - 시스템관리-사용자 메뉴에서 추가 버튼으로 사용자 등록   할 수 없는 오류 수정 내용입니다. - 제가 확인 했을때는 신규일때는 사용자 부재 설정 할 수 없어   보여서 그에 대해서 조치 했습니다.

--- a/src/main/resources/public/template/user/user.html
+++ b/src/main/resources/public/template/user/user.html
@@ -315,10 +315,13 @@
         });
 
         // 사용자 부재 설정
-        let absenceInfo = {
-            startDt: i18n.systemDateTime(document.getElementById('absenceStartDt').value),
-            endDt: i18n.systemDateTime(document.getElementById('absenceEndDt').value),
-            substituteUserKey: document.getElementById('substituteUserKey').value
+        let absenceInfo = {};
+        if ([[${users?.userKey}]] !== null) {
+            absenceInfo = {
+                startDt: i18n.systemDateTime(document.getElementById('absenceStartDt').value),
+                endDt: i18n.systemDateTime(document.getElementById('absenceEndDt').value),
+                substituteUserKey: document.getElementById('substituteUserKey').value
+            }
         }
        const data = {
            userKey: document.getElementById('userKey').value,
