--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -267,6 +267,11 @@ $scheduler-modal-height:                      38.125rem; // 610px
 $chart-edit-modal-width:                      62.5rem; // 1000px
 $chart-edit-modal-height:                     53.0625rem; // 849px
 
+$chart-title-font-family:                     $font-family-m;
+$chart-title-font-size:                       $font-size-m;
+$chart-title-font-color:                      $gray800;
+$chart-title-font-weight:                     $font-weight-bold;
+
 ///////////////////////// 사용자 정의 차트 미리보기 모달 /////////////////////////
 $chart-view-modal-width:                      62.5rem;  // 1000px
 
