--- a/src/main/resources/public/template/chart/chartViewModal.html
+++ b/src/main/resources/public/template/chart/chartViewModal.html
@@ -8,7 +8,7 @@
 <input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>
 <input type="hidden" id="tags" name="tags" th:value="|${chart?.tags}|"/>
 <div class="flex-column z-edit-row mt-2">
-    <div id="container" class="chart-content-view"/>
+    <div id="container" class="flex-row flex-wrap z-chart-content-view"/>
 </div>
 </body>
 </html>
