--- a/src/main/resources/public/template/report/reportView.html
+++ b/src/main/resources/public/template/report/reportView.html
@@ -45,7 +45,7 @@
         const STACKED_BAR_CHART = 'chart.stackedBar';
         const LINE_AND_COLUMN_CHART = 'chart.lineAndColumn';
         const BASIC_LINE_CHART = 'chart.basicLine';
-        const ACTIVITY_GAUGE_CHART = 'chart.activityGauge';
+        const GAUGE_CHART = 'chart.gauge';
         let chart = null;
 
         const report = /*[[${report}]]*/ null;
