--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -419,8 +419,12 @@
 }
 
 .z-chart-content-view {
-  width: 100%;
-  height: 25rem; // 400px
+  .z-chart-content-title {
+    font-family: $chart-title-font-family;
+    font-size: $chart-title-font-size;
+    color: $chart-title-font-color;
+    font-weight: $chart-title-font-weight;
+  }
 }
 
 // 공지사항 상단 공지
