border를 아예 없애면 줄바꿈이 됨. color를 투명으로 해서 border를 지우지 않고 그냥 둠

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -2071,7 +2071,7 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
 }
 
 div.z-textarea-readonly {
-  border: none !important;
+  border-color: transparent !important;
 }
 
 .z-switch {
@@ -6033,7 +6033,7 @@ body.modal-active {
 .z-component {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   width: 100%;
 }
 .z-component .z-component-label {
