--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -158,7 +158,7 @@
 .z-component {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   width: 100%;
   // label
   .z-component-label {
