--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1406,7 +1406,7 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
 }
 
 div.z-textarea-readonly {
-  border: none !important;
+  border-color: transparent !important;
 }
 
 .z-switch {
