--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -104,14 +104,12 @@
                     <div class="flex-column z-edit-row">
                         <label th:text="#{user.label.officeNumber}" for="officeNumber"></label>
                         <input type="text" class="z-input" id="officeNumber" name="officeNumber"
-                               th:value="${users?.officeNumber}"
-                               onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)" maxlength="100">
+                               th:value="${users?.officeNumber}" maxlength="100">
                     </div>
                     <div class="flex-column z-edit-row">
                         <label th:text="#{user.label.mobileNumber}" for="mobileNumber"></label>
                         <input type="text" class="z-input" id="mobileNumber" name="mobileNumber"
-                               th:value="${users?.mobileNumber}"
-                               onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)" maxlength="100">
+                               th:value="${users?.mobileNumber}" maxlength="100">
                     </div>
                 </div>
                 <div class="flex-column avatar-edit ml-4">
@@ -416,6 +414,12 @@
         if ([[${users.platform}]] === alicePlatform) {
             if (isEmpty('email', 'user.msg.enterUserEmail')) return false;
             if (!isValidEmail('email', true)) return false;
+        }
+        if(isNotEmpty('officeNumber')) {
+            if(!isPhoneNumber('officeNumber','validation.msg.checkPhoneNumberFormat')) return false;
+        }
+        if(isNotEmpty('mobileNumber')) {
+            if(!isPhoneNumber('mobileNumber','validation.msg.checkPhoneNumberFormat')) return false;
         }
         if (document.getElementById('userAbsence').checked) {
             if (isEmpty('absenceStartDt', 'user.msg.enterAbsenceStartDt')) return false;
