--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -32,7 +32,7 @@
         getImages(false);
         // 미리보기 모달 생성
         previewModal = new modal({
-            title: i18n.msg('image.label.name'),
+            title: `<span class="z-thumbnail-preview-name"></span>`,
             body: `<div class="z-thumbnail-preview-image"></div>`,
             classes: 'z-thumbnail-preview',
             buttons: [{
@@ -276,21 +276,21 @@
         thumbnail.parentNode.classList.add('selected');
 
         // 이미지 파일명 제목 표시
-        const previewModalHeader = previewModal.wrapper.querySelector('.modal-header');
+        const previewModalHeader = previewModal.wrapper.querySelector('.z-thumbnail-preview-name');
         if (previewModalHeader !== null) {
-            const imageNameElement = document.createElement('span');
             const imageName = thumbnail.parentNode.querySelector('.z-thumbnail-image-name').textContent;
-            imageNameElement.className = 'text-ellipsis';
-            imageNameElement.textContent = imageName;
-            imageNameElement.setAttribute('title', imageName);
-            previewModalHeader.appendChild(imageNameElement);
+            previewModalHeader.classList.add = 'text-ellipsis';
+            previewModalHeader.textContent = imageName;
+            previewModalHeader.setAttribute('title', imageName);
         }
+        console.log(previewModalHeader)
 
         // 내부 이미지 경로 변경
         const previewModalContent = previewModal.wrapper.querySelector('.z-thumbnail-preview-image');
         if (previewModalContent !== null) {
             previewModalContent.style.backgroundImage = thumbnail.style.backgroundImage;
         }
+        console.log(previewModalContent);
         // 모달 호출
         previewModal.show();
     }
