#11699 단순문의 신청서에 전화번호 유효성 체크를 하지 못한다.(성민 차장님 피드백 반영)

--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -416,7 +416,7 @@
             if (!isValidEmail('email', true)) return false;
         }
         if(isNotEmpty('officeNumber')) {
-            if(!isPhoneNumber('officeNumber','validation.msg.checkPhoneNumberFormat')) return false;
+            if(!isPhoneNumberOrExtenstionNumber('officeNumber','validation.msg.checkPhoneNumberOrExtentionNumberFormat')) return false;
         }
         if(isNotEmpty('mobileNumber')) {
             if(!isPhoneNumber('mobileNumber','validation.msg.checkPhoneNumberFormat')) return false;
