--- a/src/main/resources/public/template/report/reportTemplateSearch.html
+++ b/src/main/resources/public/template/report/reportTemplateSearch.html
@@ -34,6 +34,9 @@
 <script layout:fragment="pageScript" th:inline="javascript">
     /*<![CDATA[*/
     let offsetCount = 0;
+    const STATUS_SUCESS = "0";
+    const STATUS_FAIL = "1";
+
     window.onload = function() {
         document.getElementById('searchValue').focus();
         document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
@@ -139,7 +142,15 @@
             url: '/rest/reports/template/' + templateId,
             async: false,
             callbackFunc: function (response) {
-                console.log(response.responseText)
+                switch (response.responseText) {
+                    case STATUS_SUCESS:
+                        zAlert.success(i18n.msg("report.msg.createSucess"));
+                        break
+                    case STATUS_FAIL:
+                        zAlert.warning(i18n.msg("report.msg.creatFail"));
+                        break;
+                    default:
+                }
             },
             showProgressbar: false
         };
