#11682 태그에 따른 사용자 정의 차트 출력 구현 1. BackEnd 구조 변경 2. count 기능 구현 (pie 제외)

--- a/src/main/resources/public/template/chart/chartViewModal.html
+++ b/src/main/resources/public/template/chart/chartViewModal.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>
-<input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>
+<!--<input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>-->
+<!--<input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>-->
 <input type="hidden" id="tags" name="tags" th:value="|${chart?.tags}|"/>
 <div class="flex-column z-edit-row mt-2">
     <div id="container" class="flex-row flex-wrap z-chart-content-view"/>
