1. 구현되지 않은 부분은 임시 조치 - 오류 나는 부분 임시 조치

--- a/src/main/resources/public/template/chart/chart.html
+++ b/src/main/resources/public/template/chart/chart.html
@@ -29,8 +29,8 @@
             <div id="container" class="flex-row flex-wrap z-chart-content-view"></div>
         </div>
         <form id="frm" method="post">
-            <input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>
-            <input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>
+            <!--<input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>
+            <input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>-->
             <input type="hidden" id="tags" name="tags" th:value="|${chart?.tags}|"/>
             <div class="flex-column z-edit-row">
                 <h4 class="sub-title under-bar bold" th:text="#{chart.label.defaultInfo}"></h4>
