--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2461,6 +2461,9 @@ body.modal-active {
 .z-component .z-component-label {
   padding-left: 1rem;
 }
+.z-component span {
+  word-break: break-all;
+}
 .z-component .z-element {
   padding-right: 1rem;
 }
