--- a/src/main/resources/public/scss/document/_form.scss
+++ b/src/main/resources/public/scss/document/_form.scss
@@ -16,6 +16,9 @@ $tooltip-type: (group, row, component);
   .z-component-label {
     padding-left: 1rem;
   }
+  span {
+    word-break: break-all;
+  }
   .z-element {
     padding-right: 1rem;
   }
