--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -46,6 +46,8 @@
 <th:block layout:fragment="pageScript">
     <script th:inline="javascript" type="text/javascript">
         /*<![CDATA[*/
+        const CHART_DATE_FORMAT = 'yyyy-MM-dd HH:mm:ss';
+
         window.onload = function () {
             document.getElementById('searchValue').focus();
             document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
@@ -115,29 +117,57 @@
 
         function createModalContent() {
             return `<div class="chart-edit-content">` +
-                `<div class="flex-column" id="getChart"></div>` +
+                `<div class="flex-column" id="getChart">` +
+                    `<div class="flex-column z-edit-row mt-2">` +
+                        `<div id="container" class="flex-row flex-wrap z-chart-content-view"/>` +
+                        `</div>` +
+                    `</div>` +
                 `</div>`;
         }
 
         function getChart(chartId, chartType) {
-            const opt = {
-                method: 'get',
-                url: '/charts/' + chartId + '/preview',
-                contentType: 'application/json',
-                showProgressbar: false,
-                callbackFunc: function (response) {
-                    document.getElementById('getChart').innerHTML = response.responseText;
-                    // 가데이터 표시
-                    aliceJs.fetchJson('../../assets/js/chart/dummy/' + chartType + '.json', {
-                        method: 'GET'
-                    }).then((chartData) => {
-                        zChartManager.load(chartData);
-                    });
-                }
-            };
-            aliceJs.sendXhr(opt);
-        }
+            /*aliceJs.fetchJson('/rest/charts/' + chartId, {
+                method: 'GET',
+                showProgressbar: true
+            }).then((data) => {
+                // 사용자 날짜 데이터 변경
+                const fromDt = data.chartConfig.range.from;
+                const toDt = data.chartConfig.range.to;
+                data.chartConfig.range.from = i18n.userDateTime(fromDt, CHART_DATE_FORMAT);
+                data.chartConfig.range.to = i18n.userDateTime(toDt, CHART_DATE_FORMAT);
 
+                // 태그 데이터는 Get 일때는 tagValue 로 전달되나 서버 및 하이차트에서는 value로 처리해야 함
+                const tags = data.tags.reduce((acc, cur) => {
+                    acc.push({ value: cur.tagValue });
+                    return acc;
+                }, []);
+                data.tags = tags;
+
+                // 차트 초기화
+                zChartManager.load(data);
+            });*/
+
+            // 가데이터 표시
+            aliceJs.fetchJson('../../assets/js/chart/dummy/' + chartType + '.json', {
+                method: 'GET'
+            }).then((data) => {
+                // 사용자 날짜 데이터 변경
+                const fromDt = data.chartConfig.range.from;
+                const toDt = data.chartConfig.range.to;
+                data.chartConfig.range.from = i18n.userDateTime(fromDt, CHART_DATE_FORMAT);
+                data.chartConfig.range.to = i18n.userDateTime(toDt, CHART_DATE_FORMAT);
+
+                // 태그 데이터는 Get 일때는 tagValue 로 전달되나 서버 및 하이차트에서는 value로 처리해야 함
+                const tags = data.tags.reduce((acc, cur) => {
+                    acc.push({ value: cur.tagValue });
+                    return acc;
+                }, []);
+                data.tags = tags;
+
+                // 차트 초기화
+                zChartManager.load(data);
+            });
+        }
         /*]]>*/
     </script>
     <script type="module">
