--- a/src/main/resources/public/template/report/reportCore.html
+++ b/src/main/resources/public/template/report/reportCore.html
@@ -11,5 +11,6 @@
 <div class="z-wrapper">
     <th:block layout:fragment="content"></th:block>
 </div>
+<th:block layout:fragment="pageScript"></th:block>
 </body>
 </html>
