1. 카운트시 초기화 안되는 현상 수정 2. 차트 신규 등록화면 오류 수정

--- a/src/main/resources/public/template/chart/chart.html
+++ b/src/main/resources/public/template/chart/chart.html
@@ -201,7 +201,7 @@
             zChartManager.load(getChartData(false));
             if (chartId !== null) {
                 // 데이터 업데이트
-                zChartManager.update([[${chart.chartData}]]);
+                zChartManager.update([[${chart?.chartData}]]);
             }
         };
         /**
