--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -240,7 +240,7 @@
       &[src=''] {
         display: none;
         + .z-imagebox-placeholder {
-          display: block;
+          display: grid;
         }
       }
     }
