--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -7,17 +7,11 @@
 </head>
 <th:block layout:fragment="content">
     <div class="z-print">
-        <table class="z-print-main">
-            <thead><tr><td>
-                <div class="z-print-header-space"> </div>
-            </td></tr></thead>
-            <tbody><tr><td>
-                <div class="z-drawing-board" id="documentDrawingBoard" data-display="print"></div>
-            </td></tr></tbody>
-            <tfoot><tr><td>
-                <div class="z-print-footer-space"> </div>
-            </td></tr></tfoot>
-        </table>
+        <div class="z-print-main flex-column align-items-center">
+            <div class="z-print-header-space"> </div>
+            <div class="z-drawing-board" id="documentDrawingBoard" data-display="print"></div>
+            <div class="z-print-footer-space"> </div>
+        </div>
         <div class="z-print-main-footer">
             <img class="z-img i-logo-print" th:src="@{/assets/media/icons/logo/icon_logo_print.svg}" width="152" height="26">
             <span class="float-right align-right" id="print-information"></span>
