--- a/src/main/resources/public/scss/document/_print.scss
+++ b/src/main/resources/public/scss/document/_print.scss
@@ -8,8 +8,8 @@
 .z-print {
   margin: 0 auto;
 
-  table {
-    tr { height: 0; }
+  z-print-main > div {
+    height: 0;
   }
 
   &-main-footer {
@@ -40,6 +40,9 @@
   html, body {
     width: $print-a4-width;
     height: $print-a4-height;
+    color-adjust: exact;
+    print-color-adjust: exact;
+    -webkit-print-color-adjust: exact;
   }
   .z-print {
     padding: 0;
@@ -61,15 +64,18 @@
 
     &-main {
       margin: 0 auto;
-      // 페이지 마다 하단 영역 표시
-      thead { display: table-header-group; }
-      tbody { display: table-row-group; }
-      tfoot { display: table-footer-group; }
+
+      .z-print-header-space { display: table-header-group; }
+      .z-drawing-board { display: table-row-group; }
+      .z-print-footer-space { display: table-footer-group; }
 
       // 폼이 그려지는 영역
       .z-drawing-board {
         .z-form {
           display: table-row;
+          .z-row-tooltip {
+            break-inside: avoid;
+          }
         }
       }
     }
