#11643 폼 디자이너 커스텀코드 기본값 속성 화면 변경

--- a/src/main/resources/public/scss/formDesigner/_buttons.scss
+++ b/src/main/resources/public/scss/formDesigner/_buttons.scss
@@ -195,4 +195,9 @@
       &.i-folder { background: $element-icon-color; }
     }
   }
+  &.z-button-code {
+    .z-icon {
+      &.i-search { background: $element-icon-color; }
+    }
+  }
 }
