--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -3502,6 +3502,9 @@ select {
 .z-button-icon.z-button-attach-file .z-icon.i-folder {
   background: #8B9094;
 }
+.z-button-icon.z-button-code .z-icon.i-search {
+  background: #8B9094;
+}
 
 /* _alerts.scss
  *
@@ -6000,8 +6003,7 @@ body.modal-active {
 
 .z-component-tooltip {
   position: relative;
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
-          + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.375rem 0.5rem;
   margin: 0.5rem;
   border: 0.0625rem dashed #CFD5D9;
@@ -6037,8 +6039,7 @@ body.modal-active {
   width: 100%;
 }
 .z-component .z-component-label {
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
-          + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   justify-content: var(--data-align);
   font-weight: 500;
   padding: 0.4375rem 0.938rem 0.4375rem 0;
@@ -6050,8 +6051,7 @@ body.modal-active {
   display: none;
 }
 .z-component .z-element {
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
-          + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0;
   pointer-events: none;
 }
@@ -6245,6 +6245,152 @@ body.modal-active {
   background: #339AF0;
 }
 
+/* _tree.scss 
+ *
+ * 파일 경로 : template/_tree.scss
+ * @description 트리 구조 디자인
+ * @author wdj
+ * @version 1.0
+ */
+ul.tree {
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #222529;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+}
+ul.tree li {
+  position: relative;
+  display: block;
+  line-height: 1.875rem;
+  padding-right: 0.125rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
+}
+ul.tree ul {
+  position: relative;
+  margin: 0 0 0 calc(0.875rem * 2.3);
+  padding: 0;
+  list-style-type: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+ul.tree ul:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  border-left: 0.0625rem solid #CFD5D9;
+}
+ul.tree ul li {
+  padding-left: calc((0.875rem / 2) + 0.5rem + (1.438rem / 2));
+}
+ul.tree ul li:before {
+  content: "";
+  position: absolute;
+  top: 0.9375rem;
+  left: 0;
+  width: calc((0.875rem / 2) + 0.5rem + (1.438rem / 2));
+  height: 0.0625rem;
+  border-top: 0.0625rem solid #CFD5D9;
+}
+ul.tree ul li:last-child:before {
+  background-color: #FAFAFA;
+  height: auto;
+  top: 0.9375rem;
+  bottom: 0;
+}
+ul.tree label {
+  color: #222529;
+}
+
+img.exp_col {
+  cursor: pointer;
+}
+img.exp_col_empty {
+  width: 1rem;
+  cursor: pointer;
+}
+img.on {
+  display: inline-block;
+}
+img.off {
+  display: none;
+}
+img.icon_tree {
+  vertical-align: middle;
+  padding-left: 0.188rem;
+  margin-top: -0.188rem;
+}
+
+span.node {
+  padding: 0.25rem 0.188rem 0.25rem 0;
+  border: 0.0625rem solid transparent;
+  cursor: pointer;
+}
+span.node:hover {
+  background-color: #E3F5FC;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+}
+span.node label {
+  padding-left: 0.5rem;
+  cursor: pointer;
+}
+
+span.node_selected,
+span.modal_node_selected {
+  padding: 0.25rem 0.188rem 0.25rem 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+span.node_selected label,
+span.modal_node_selected label {
+  color: #339AF0;
+  padding-left: 0.5rem;
+  cursor: pointer;
+}
+
+.tree-container {
+  position: relative;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  margin: 1.875rem 2.5rem;
+}
+.tree-container .tree-title {
+  height: 2.5rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #222529;
+  border-bottom: 0.0625rem solid #CFD5D9;
+}
+.tree-container .tree-list {
+  height: 32.5rem;
+  margin-top: 0.625rem;
+}
+.tree-container .tree-nodata {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #222529;
+}
+
 /* 세부 속성 디자인 */
 .property-group {
   display: flex;
@@ -6270,8 +6416,7 @@ body.modal-active {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  flex-basis: calc(((100% - 44px) * var(--data-column, 12)) / 12
-          + (var(--data-column) - 1) * 4px);
+  flex-basis: calc(((100% - 44px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 4px);
   margin: 0.9375rem 0 0 0;
 }
 .property .property-label {
