--- a/src/main/resources/public/template/scheduler/scheduler.html
+++ b/src/main/resources/public/template/scheduler/scheduler.html
@@ -487,7 +487,7 @@
                 } else if (method === 'execute') {
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
-                            zAlert.success(i18n.msg('common.msg.success'));
+                            zAlert.success(i18n.msg('common.msg.process'));
                             break;
                         case STATUS_ERROR_SCHEDULER_EXECUTE:
                             zAlert.warning(i18n.msg('common.msg.fail'));
