--- a/src/main/resources/public/template/report/reportView.html
+++ b/src/main/resources/public/template/report/reportView.html
@@ -69,8 +69,14 @@
             data.chartConfig.range.from = i18n.userDateTime(fromDt, CHART_DATE_FORMAT);
             data.chartConfig.range.to = i18n.userDateTime(toDt, CHART_DATE_FORMAT);
 
+            // 태그 데이터를 tagValue > value 로 변경한다.
+            const tags = data.tags.reduce((acc, cur) => {
+                acc.push({ value: cur.tagValue });
+                return acc;
+            }, []);
+            data.tags = tags;
+
             // 차트 초기화
-            console.log(data);
             zChartManager.load(data.chartId + '_chart', data);
         }
 
