1. 보고서 조회 화면 조회시 하단 날짜 invalid 수정

--- a/src/main/resources/public/template/report/reportView.html
+++ b/src/main/resources/public/template/report/reportView.html
@@ -43,7 +43,7 @@
             // footer
             const userName = '[[${#authentication.details.userName}]]';
             const userEmail = '[[${#authentication.details.email}]]';
-            const time = '[[${report.publishDt}]]';
+            const time = /*[[${report.publishDt}]]*/'';
             const reportInfo = document.getElementById('report-information');
             reportInfo.innerHTML = userName + ' [' + userEmail + ']<br>' + i18n.printFormat(time);
 
