--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -29,9 +29,13 @@
         <input type="text" class="z-input i-date-picker search-date col-3" id="searchFromDt" name="searchFromDt"/>
         <input type="text" class="z-input i-date-picker search-date col-3" id="toDt" name="toDt"/>
         <input type="hidden" class="search-date col-2" id="searchToDt" name="searchToDt" readonly="readonly"/>
-        <input  type="text" class="z-input i-search col-3 mr-2" id="searchTag" name="searchTag"
-                maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
+        <input type="text" class="z-input i-search col-3 mr-2" id="searchTag" name="searchTag"
+               maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
         <span id="spanTotalCount" class="z-search-count"></span>
+        <button type="button" class="z-button secondary" id="btnExcelDownload" name="btnExcelDownload"
+                sec:authorize="hasAuthority('token.create')" th:text="#{common.btn.export}"
+                th:onclick="|javascript:onExcelDownload()|">
+        </button>
     </form>
 </div>
 <div layout:fragment="pageSearchResult">
@@ -62,7 +66,9 @@
             element.addEventListener('change', () => tokenSearch(false), false);
         });
 
-        document.getElementById('searchValue').addEventListener('keyup', () => {tokenSearch(false);}, false);
+        document.getElementById('searchValue').addEventListener('keyup', () => {
+            tokenSearch(false);
+        }, false);
 
         new zTag(document.getElementById('searchTag'), {
             suggestion: true,
@@ -196,6 +202,15 @@
             popUpUrl = '/tokens/' + tokenId + '/view'
         }
         window.open(popUpUrl, 'token_' + tokenId, 'width=' + (screen.width - 50) + ', height=' + (screen.height - 150));
+    }
+
+    function onExcelDownload() {
+        document.getElementById('searchToDt').value = i18n.makeUserDate(document.getElementById('toDt').value, {'days': 1});
+        const search = aliceJs.serialize(document.getElementById('frmSearch')) + '&offset=' + 0;
+        aliceJs.fetchDownload({
+            url: '/rest/tokens/excel?' + search,
+            fileName: i18n.msg('token.label.list') + '_' + new Date().toISOString().substring(0, 10).replace(/-/g, '')
+        });
     }
 
     /* ]]> */
